--- a/styles/main.css
+++ b/styles/main.css
@@ -1,61 +1,63 @@
 body {
     max-width: 760px;
     width: 100%;
-    margin:  auto;
+    margin: auto;
     padding-top: 10px;
     line-height: 2em;
     background-color: #fff;
-    
+
+}
+header img{
+    width: 25%;
+    height: 35%;
+    margin-left: 30px;
+    margin-top: 30px;
+    margin-bottom: 30px;
+    border: solid grey;
+    border-radius: 10px;
+    box-shadow: 2px 2px 2px 2px grey;
 }
 
-header{
+header {
     display: flex;
-    background-color:lightblue;
-    border-radius:20px;
+    background-color: rgb(0,71,100,0.9);
+    border-radius: 20px;
     border: solid 0.5px lightblue;
     box-shadow: 5px 5px 5px 5px #999;
-    text-align:center;
-    
-}
+    text-align: center;
 
-header img{
-    width:18%;
-    margin-left:30px;
-    margin-top: 20px;
-    margin-bottom:20px;
-    border: solid 2px grey;
-    border-radius: 10px;
-    box-shadow: 2px 2px 2px 2px darkgrey;
 }
- header h1{
-    color:white;
+header h1 {
+    color: white;
     transform: translate(30%, 40%);
     font-size: 2.5em;
     text-shadow: 2px 2px black;
- }
+}
 
 
-main{
+main {
     background-color: white;
     padding-bottom: 15px;
 }
 
 main h2 {
-    font-size:1.5em;
+    font-size: 1.5em;
     border-bottom: 1px solid black;
     margin-left: 40px;
     margin-right: 100px;
-    padding-top:15px;
-    
+    padding-top: 15px;
+
 }
+
 main ul li {
     margin-left: 50px;
     font-size: 20px;
     padding-bottom: 10px;
 }
+
 .paragraph-1 {
     border-top: 1px solid black;
-    font-size:1em;
+    font-size: 1em;
     padding-top: 0px;
     margin-left: 40px;
     margin-right: 100px;
@@ -63,45 +65,45 @@ main ul li {
 }
 
 
-footer{
-    background-color:skyblue;
-    color: white;
+footer {
+    background-color: rgb(157, 210, 231,0.8);
+    color: black;
     text-align: center;
-    padding-top:5px;
+    padding-top: 5px;
     font-size: 20px;
     border: 1px solid white;
     box-shadow: 5px 5px 5px 5px #999;
     border-radius: 50px;
     margin-top: 30px;
-    margin-bottom:50px;
+    margin-bottom: 50px;
 }
 
-footer p{
+footer p {
     font-size: 22px;
-    
+
 }
 
-.paragraph-2{
-    color:green;
+.paragraph-2 {
+    color: green;
 }
 
 @media screen and (max-width: 900px) {
-    body{
-        background-color:brown;
-        width:100%;
+    body {
+        background-color: lightblue;
+        width: 100%;
         max-width: 400px;
         margin: auto;
     }
 
-    main{
+    main {
         background-color: white;
     }
 
-    header h1{
-    color:brown;
-    transform: translate(15%, 40%);
-    font-size: 1.5em;
-    text-shadow: 2px 2px white;
+    header h1 {
+        color: lightblue;
+        transform: translate(15%, 40%);
+        font-size: 1.5em;
+        text-shadow: 2px 2px white;
 
     }
 
