--- a/styles/main.css
+++ b/styles/main.css
@@ -31,7 +31,7 @@ header h1 {
     color: white;
     transform: translate(30%, 40%);
     font-size: 2.5em;
-    text-shadow: 2px 2px black;
+    text-shadow: none;
 }
 
 
