--- a/styles/main.css
+++ b/styles/main.css
@@ -31,7 +31,7 @@ header h1 {
     color: white;
     transform: translate(30%, 40%);
     font-size: 2.5em;
-    text-shadow: none;
+    text-shadow:2px 2px black;
 }
 
 
@@ -99,13 +99,9 @@ footer p {
         background-color: white;
     }
 
-    header h1 {
-        color: lightblue;
-        transform: translate(15%, 40%);
-        font-size: 1.5em;
-        text-shadow: 2px 2px white;
+    
 
-    }
+    
 
 
 }
