--- a/lesson2/styles/large.css
+++ b/lesson2/styles/large.css
@@ -26,7 +26,7 @@
         
     }
     header h1 {
-        color: black;
+        color: white;
         font-size: 3.5em;
         text-shadow:2px 2px none;
     }
