--- a/lesson2/styles/medium.css
+++ b/lesson2/styles/medium.css
@@ -24,7 +24,7 @@
     }
     
      header h1{
-        color:black;
+        color:white;
         font-size: 2.5em;
         text-shadow: 2px 2px none;
      }
