--- a/styles/main.css
+++ b/styles/main.css
@@ -28,7 +28,7 @@ header {
 
 }
 header h1 {
-    color: black;
+    color: white;
     transform: translate(30%, 40%);
     font-size: 2.5em;
     text-shadow:2px 2px none;
