--- a/lesson2/styles/small.css
+++ b/lesson2/styles/small.css
@@ -22,7 +22,7 @@ header{
     
 }
 header h1{
-    color:black;
+    color:white;
     font-size: 1.5em;
     text-shadow: 2px 2px none;
     text-align:center;
