--- a/styles/main.css
+++ b/styles/main.css
@@ -23,11 +23,12 @@ header {
     background-color: rgb(0,71,100,0.9);
     border-radius: 20px;
     border: solid 0.5px lightblue;
+
     box-shadow: 5px 5px 5px 5px #999;
     text-align: center;
 
 }
-header h1 {
+h1{
     color: white;
     transform: translate(30%, 40%);
     font-size: 2.5em;
