--- a/styles/main.css
+++ b/styles/main.css
@@ -30,6 +30,8 @@ header {
 }
 header h1{
     color: white;
+    transform: translate(30%, 40%);
+    forced-color-adjust: white;
     font-size: 2.5em;
     text-shadow:2px 2px none;
 }
@@ -99,7 +101,7 @@ footer p {
         background-color: white;
     }
     header h1{
-        color:black;
+        color:white;
         transform: translate(15%, 40%);
         font-size: 1.5em;
         text-shadow: 2px 2px none;
