--- a/chamber/css/medium.css
+++ b/chamber/css/medium.css
@@ -2,7 +2,6 @@
     main .hero {
 
         grid-row: 1;
-        padding: 50px;
         grid-column: 1/3;
     }
 
@@ -13,10 +12,13 @@
     }
 
     main .join {
-        padding: 50px;
+        padding: 10px;
         grid-row: 4;
         grid-column: 1/3;
         display: block;
+        background-color: yellow;
+        text-align: center;
+        margin-top: 10px;
         border: 1px solid rgb(22, 65, 80);
 
     }
@@ -33,6 +35,7 @@
         display: grid;
         grid-template-columns: 1fr 1fr;
         grid-row: 3;
+        background-color: yellow;
 
     }
 
@@ -42,6 +45,7 @@
         margin: 15px 15px 15px 20px;
         grid-column: 1/2;
         grid-row: span 2;
+        background-color: yellow;
 
     }
 
@@ -50,6 +54,7 @@
         margin: 15px 15px 15px 20px;
         grid-column: 2/3;
         grid-row: span 2;
+        background-color: yellow;
     }
 
     #spotlight-section .spotlight3 {
@@ -58,6 +63,8 @@
         grid-column: 2/3;
         grid-row: span 2;
         display: none;
+        background-color: yellow;
+
     }
 
     main .event {
@@ -112,5 +119,14 @@
     .footer2 p:nth-child(1),
     .footer2 p:nth-child(2) {
         border-right: 1px solid black;
+    }
+
+    .join .joinButton {
+        display: block;
+        border: 2px solid rgb(22, 65, 80);
+        background-color: yellow;
+        text-align: center;
+        margin: auto;
+        padding: 15px 20px;
     }
 }
