--- a/chamber/css/large.css
+++ b/chamber/css/large.css
@@ -63,6 +63,7 @@
     main .news-release {
         grid-row: 3;
         grid-column: 2/3;
+        margin-top: 50px;
     }
 
     main #spotlight-section {
@@ -89,10 +90,20 @@
         grid-column: 1/3;
     }
 
+    #spotlight-section .spotlight1 img {
+        width: 70%;
+        height: 50%;
+    }
+
     #spotlight-section .spotlight2 {
         margin: 0px 20px 10px 20px;
         grid-row: 2;
         grid-column: 1/3;
+    }
+
+    #spotlight-section .spotlight2 img {
+        width: 70%;
+        height: 50%;
     }
 
     #spotlight-section .spotlight3 {
