--- a/chamber/css/small.css
+++ b/chamber/css/small.css
@@ -138,7 +138,8 @@ main {
 main .hero {
     grid-row: 1;
     border: 1px solid rgb(22, 65, 80);
-    padding: 50px;
+    position: relative;
+    justify-content: center;
 }
 
 
@@ -147,6 +148,7 @@ main .news-release {
     grid-row: 4;
     border: 1px solid rgb(22, 65, 80);
     padding: 50px;
+    background-color: yellow;
 }
 
 #spotlight-section {
@@ -183,15 +185,27 @@ main .join {
 main .event {
     grid-row: 2;
     border: 1px solid rgb(22, 65, 80);
-    padding: 50px;
+    background-color: yellow;
+    padding: 5px;
+}
+
+main .event p a {
+    text-decoration: none;
+    color: rgb(22, 65, 80);
 }
 
 main .weather {
     grid-row: 3;
     border: 1px solid rgb(22, 65, 80);
-    padding: 50px;
+    padding: 10px;
+    margin-top: 15px;
+    background-color: yellow;
 }
 
+main .weather img {
+    width: 100%;
+    height: 100%;
+}
 
 footer {
     background-color: yellow;
@@ -214,7 +228,6 @@ footer img {
 
 .location a {
     text-decoration: none;
-    color: var(--secondary-color);
 }
 
 .footer1 {
@@ -230,4 +243,123 @@ footer img {
 
 .footer2 p {
     margin: 0;
+}
+
+.banner {
+    background: yellow;
+    display: none;
+}
+
+.banner-box {
+    padding-top: 15px;
+    max-width: 700px;
+    margin: 0 auto;
+    display: flex;
+    align-items: center;
+}
+
+.banner-text {
+    flex-grow: 1;
+}
+
+.banner-close {
+    background: none;
+    font-weight: bold;
+    cursor: pointer;
+    border: 2px solid black;
+    background: linear-gradient(90deg, transparent, black, transparent) bottom / var(--d, 0) 3px no-repeat;
+    transition: 0.5s;
+}
+
+.banner-close:hover {
+    background-color: rgba(22, 65, 80, 0.3);
+    --d: 75%;
+}
+
+.banner-text,
+.banner-close>span {
+    color: black;
+    font-weight: bold;
+}
+
+.banner.banner-shown {
+    display: block;
+}
+
+
+.hero img {
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+}
+
+.hero h1 {
+    z-index: 2;
+    position: absolute;
+    top: 20%;
+    left: 25%;
+    font-family: 'Kurale', Arial, Helvetica, sans-serif;
+    color: white;
+
+}
+
+.hero .joinButton {
+    position: absolute;
+    z-index: 3;
+    bottom: 7%;
+    text-decoration: none;
+    background-color: yellow;
+    border: 2px solid rgb(22, 65, 80);
+    color: black;
+    right: 2.5%;
+    border-radius: 10px;
+    max-width: 20rem;
+    padding: 5px;
+}
+
+.joinButton a {
+    text-decoration: none;
+    font-weight: bold;
+    font-size: 1.5em;
+
+    font-family: 'Cardo', Arial, Helvetica, sans-serif;
+    color: black;
+
+    font-size: 0.95rem;
+    background: linear-gradient(90deg, transparent, black, transparent) bottom / var(--d, 0) 3px no-repeat;
+    transition: 0.5s;
+}
+
+.joinButton a:hover {
+    background-color: rgba(22, 65, 80, 0.3);
+    --d: 75%;
+}
+
+/*fonts*/
+main p {
+    text-align: center;
+    margin-left: 30px;
+    margin-right: 30px;
+    font-size: 18px;
+}
+
+h1 {
+    font-size: 3em;
+    font-family: 'Cardo', Arial, Helvetica, sans-serif;
+}
+
+h2 {
+    text-align: center;
+    font-size: 2em;
+    font-family: 'Cardo', Arial, Helvetica, sans-serif;
+}
+
+h3 {
+    text-align: center;
+    font-size: 1.5em;
+    font-family: 'Cardo', Helvetica, sans-serif;
+}
+
+p {
+    font-family: 'Kurale', 'Times New Roman', Times, serif;
 }
