--- a/chamber/css/large.css
+++ b/chamber/css/large.css
@@ -63,13 +63,13 @@
     main .news-release {
         grid-row: 3;
         grid-column: 2/3;
-        margin-top: 50px;
+        margin-top: 10px;
     }
 
     main #spotlight-section {
         display: grid;
         grid-template-rows: 1fr 1fr;
-        margin-bottom: 12px;
+        margin-bottom: 5px;
         grid-column: 3;
         grid-row: span 3;
 
@@ -92,7 +92,7 @@
 
     #spotlight-section .spotlight1 img {
         width: 70%;
-        height: 50%;
+        height: 40%;
     }
 
     #spotlight-section .spotlight2 {
@@ -103,7 +103,7 @@
 
     #spotlight-section .spotlight2 img {
         width: 70%;
-        height: 50%;
+        height: 40%;
     }
 
     #spotlight-section .spotlight3 {
@@ -120,12 +120,14 @@
 
     main .event {
         grid-row: 1;
-        grid-row: 1/2;
+        grid-row: 1;
+        margin-bottom: 5px;
     }
 
     main .weather {
         grid-row: 2;
         grid-column: 1/2;
+        margin-top: 5px;
     }
 
 
