--- a/lesson09/styles/prophets.css
+++ b/lesson09/styles/prophets.css
@@ -1,58 +1,73 @@
-@import url('https://fonts.googleapis.com/css2?family=Hubballi&family=Roboto:wght@600&display=swap');
-
-h1 {
-    text-align: center;
-    background-color: rgb(79, 132, 167);
-    color: white;
-    font-family: 'Roboto', sans-serif;
-
+body {
+    font-family: Verdana, Geneva, Tahoma, sans-serif, sans-serif;
+    margin: 0;
+    padding: 0;
 }
 
-main {
-    max-width: 1380px;
-    margin: 0 auto;
+header {
+    background-color: black;
+    color: white;
     text-align: center;
-    margin-bottom: 15px;
+    padding: 20px;
+    margin-bottom: 40px;
 }
 
 .cards {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
-    grid-gap: 2px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    margin-top: 20px;
+}
+
+section {
+    border: 1px solid white;
+    margin: 20px 10px 80px 10px;
+    padding: 10px;
+    width: 360px;
+    height: 600px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    color: white;
+    background-color: black;
+    box-shadow: 1px 1px 15px 4px rgb(0, 0, 0);
+    ;
 }
 
 img {
-    margin-top: 15px;
-    width: 100%;
-    box-shadow: 1px 1px 15px 4px rgb(0, 0, 0);
+    display: block;
+    margin: auto;
+    max-width: 100%;
+    height: auto;
+    border: 1px solid white;
+    box-shadow: 2px 2px 6px 2px rgb(255, 255, 255);
+    ;
 }
 
-.card {
-    padding: 10px 65px;
-    background-color: rgb(79, 132, 167);
-    border-radius: 3px;
-    border: 2px solid rgb(156, 156, 156);
-}
-
-p {
-    font-size: 1.1rem;
-    font-family: 'Hubballi', cursive;
-    font-weight: 700;
+h1 {
+    margin: 0;
 }
 
 h2 {
-    font-size: 1.5rem;
-    color: rgb(0, 247, 255);
-    font-family: 'Roboto', sans-serif;
+    text-align: center;
+    margin: 10px;
+}
+
+p {
+    text-align: center;
+    font-family: 'Times New Roman', serif;
+    margin-block-start: .5em;
+    margin-block-end: .5em;
+
+
 }
 
 footer {
-    font-size: 1.2rem;
-    font-family: 'Hubballi', cursive;
-    font-weight: 700;
+    background-color: black;
+    color: white;
     text-align: center;
+    padding: 10px;
 }
-
 
 @media screen and (min-width:1020px) {
 
@@ -64,7 +79,7 @@ footer {
         font-size: 1.6rem;
     }
 
-    .card {
+    section {
         padding: 10px 45px;
     }
 
