week 08 join page feedback implemented

--- a/chamber/css/large.css
+++ b/chamber/css/large.css
@@ -150,5 +150,18 @@
 
     }
 
+    form {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
 
+    }
+
+    form .child {
+        flex: 25%;
+    }
+
+    form .child1 {
+        flex: 75%;
+    }
 }
