--- a/chamber/css/medium.css
+++ b/chamber/css/medium.css
@@ -135,4 +135,30 @@
         grid-template-columns: 1fr 1fr;
     }
 
+    .basic-grid h1,
+    .company-info {
+        grid-column: 1/3;
+    }
+
+    .companyGrid,
+    .companyList>* {
+        display: grid;
+        grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    }
+
+    .companyGrid {
+        gap: 30px;
+        margin-left: 5%;
+        margin-right: 5%;
+    }
+
+    .companyGrid>* {
+        padding: 1em;
+        margin: 5px;
+    }
+
+    .companyList div {
+        padding: 0.75em;
+    }
+
 }
