--- a/bountifulfoods/styles/small.css
+++ b/bountifulfoods/styles/small.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Kurale&family=Rock+Salt&display=swap');
+
 /* header */
 .header-logo {
     display: flex;
@@ -118,4 +120,33 @@ footer {
 .logo-footer,
 .social-img {
     max-width: 90px;
+}
+
+/*fonts*/
+main p {
+    text-align: center;
+    margin-left: 30px;
+    margin-right: 30px;
+    font-size: 18px;
+}
+
+h1 {
+    font-size: 3em;
+    font-family: 'Rock Salt', Arial, Helvetica, sans-serif;
+}
+
+h2 {
+    text-align: center;
+    font-size: 2em;
+    font-family: 'Rock Salt', Arial, Helvetica, sans-serif;
+}
+
+h3 {
+    text-align: center;
+    font-size: 1.5em;
+    font-family: 'Rock Salt', Helvetica, sans-serif;
+}
+
+p {
+    font-family: 'Kurale', 'Times New Roman', Times, serif;
 }
